--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
       <h1 class="text-center">Hello, {{ title }}</h1>
       <p class="text-center">Congratulations! Your app is running. 🎉</p>
 
-      
+      <app-admindash></app-admindash>
     
 <router-outlet />
