--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 
-      <h1 class="text-center">Hello, {{ title }}</h1>
-      <p class="text-center">Congratulations! Your app is running. 🎉</p>
+      <!-- <h1 class="text-center">Hello, {{ title }}</h1>
+      <p class="text-center">Congratulations! Your app is running. 🎉</p> -->
 
-      <app-admindash></app-admindash>
+      <!-- <app-admindash></app-admindash> -->
     
-<router-outlet />
+<router-outlet></router-outlet>
+
