--- a/src/app/appoinment/appoinment.component.html
+++ b/src/app/appoinment/appoinment.component.html
@@ -11,7 +11,7 @@
         
 
         <li class="nav-item">
-            <a style="color: white;"class="nav-link active" aria-current="page" href="javascript:void(0);" routerLink="/appointmentlist">Appointments</a>
+            <a style="color: white;"class="nav-link active" aria-current="page" href="javascript:void(0);" routerLink="/admin">Admins</a>
           </li>
 
         
@@ -30,9 +30,9 @@
   
   <div class="container">
   <hr>
-    <h2 style="text-align: center;margin-top: 20PX;">Admin Dashboard</h2>
+    <h2 style="text-align: center;margin-top: 20PX;">Appointment Dashboard</h2>
     <a style="color: rgb(86, 86, 86); font-size: x-large;"><marquee behavior="scroll" direction="left">
-      Welcome to Admin Dashboard. Please find the patient list below!!. Click Appointments to view and update Appointments, Click Add Appointment to add new Appointment</marquee></a>
+      Welcome to Admin Dashboard. Please find the patient list below!!. Click Admin  to view and update Admins, Click Add Admin  to add new Admin </marquee></a>
   <hr>
   <input type="text" name="search"  placeholder="Search" > 
   <br>
@@ -45,24 +45,20 @@
     <tr>
         <th>Id</th>
         <th>Name</th>
-        <th>age</th>
-        <th>blood</th>
-        <th>Prescription</th>
-        <th>dose</th>
-        <!-- <th>fees</th> -->
-        <th>urgency</th>
+        <th>Age</th>
+        <th>Symtomps</th>
+        <th>Number</th>
+        
     </tr>
 </thead>
 <tbody>
-<tr *ngFor="let patient of patients">
-    <td>{{patient.id}}</td>
-    <td>{{patient.name}}</td>
-    <td>{{patient.age}}</td>
-    <td>{{patient.blood}}</td>
-    <td>{{patient.prescription}}</td>
-    <td>{{patient.dose}}</td>
-    <!-- <td>{{patient.fees}}</td> -->
-    <td>{{patient.urgency}}</td>
+<tr *ngFor="let appointment of appointments">
+    <td>{{appointment.id}}</td>
+    <td>{{appointment.name}}</td>
+    <td>{{appointment.age}}</td>
+    <td>{{appointment.symtomps}}</td>
+    <td>{{appointment.number}}</td>
+    
 
 </tr>
 
