--- a/src/app/appoinment/appoinment.component.html
+++ b/src/app/appoinment/appoinment.component.html
@@ -8,10 +8,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
-        
+        <li class="nav-item">
+            <a style="color: white;"class="nav-link active" aria-current="page" href="javascript:void(0);" routerLink="/create-appoinment">Add Appointment</a>
+          </li>        
 
         <li class="nav-item">
-            <a style="color: white;"class="nav-link active" aria-current="page" href="javascript:void(0);" routerLink="/admin">Admins</a>
+            <a style="color: white;"class="nav-link active" aria-current="page" href="javascript:void(0);" routerLink="/admin">Back</a>
           </li>
 
         
@@ -61,6 +63,5 @@
     
 
 </tr>
-
 </tbody>
 </table>
