Medicine show list
create   component, service & class

--- a/src/app/docdas/docdas.component.html
+++ b/src/app/docdas/docdas.component.html
@@ -15,7 +15,7 @@
             
           </li>
           <li>
-            <a style="color: white;"class="nav-link active" aria-current="page" href="javascript:void(0);" routerLink="/n">View Medicines</a>
+            <a style="color: white;"class="nav-link active" aria-current="page" href="javascript:void(0);" routerLink="/view-medicine">View Medicines</a>
           </li>
 
         
