--- a/src/app/medicinelist/medicinelist.component.html
+++ b/src/app/medicinelist/medicinelist.component.html
@@ -8,9 +8,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
-        <!-- <li class="nav-item">
-            <a style="color: white;"class="nav-link active" aria-current="page" href="javascript:void(0);" routerLink="/create-appoinment">Add Appointment</a>
-          </li>         -->
+        <li class="nav-item">
+            <a style="color: white;"class="nav-link active" aria-current="page" href="javascript:void(0);" routerLink="/create-medicine">Add Medicine</a>
+          </li>        
 
         <li class="nav-item">
             <a style="color: white;"class="nav-link active" aria-current="page" href="javascript:void(0);" routerLink="/docdash">Back</a>
@@ -24,6 +24,18 @@
     </div>
   
   </nav>
+
+
+  <div class="container">
+  <hr>
+    <h2 style="text-align: center;margin-top: 20PX;">Medicines List</h2>
+    <hr>
+  <input type="text" name="search"  placeholder="Search" > 
+  <br>
+    <a style="color: rgb(86, 86, 86); font-size: xx-large;">Current Medicine List in the Queue</a>
+<div class="tableFixHead">
+  <br>
+
 
 <div class="tableFixHead">
     <br>
@@ -51,4 +63,5 @@
 
 </tbody>
 </table>
+</div>
 </div>
