--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,8 +24,8 @@
           </ul>
           
             <div class="mx-2">
-                <button style="margin: 5px;" class="btn btn-danger" data-toggle="modal" data-target="#loginModal"><a style="color: white;" href="javascript:void(0);" routerLink="/doclogin">Login as Doctor</a></button>
-                <button style="margin: 5px;"class="btn btn-danger" data-toggle="modal" data-target="#loginModal"><a style="color:white;" href="javascript:void(0);" routerLink="/adlogin">Login as Admin</a></button>
+                <button style="margin: 5px;" class="btn btn-danger" data-toggle="modal" data-target="#loginModal"><a style="color: white;" href="javascript:void(0);" routerLink="/docdash">Login as Doctor doclogin</a></button>
+                <button style="margin: 5px;"class="btn btn-danger" data-toggle="modal" data-target="#loginModal"><a style="color:white;" href="javascript:void(0);" routerLink="/admin">Login as Admin adlogin</a></button>
                 
             </div>
         </div>
