--- a/src/app/docdas/docdas.component.html
+++ b/src/app/docdas/docdas.component.html
@@ -78,7 +78,7 @@
     <!-- <td>{{patient.fees}}</td> -->
     <td>{{patient.urgency}}</td>
     <td>
-      <button (click)="patientUpdate(patient.id)"  class="btn btn-success">Update</button>
+      <button (click)="update(patient.id)"  class="btn btn-success">Update</button>
       
     </td>
 </tr>
