--- a/src/app/docdas/docdas.component.html
+++ b/src/app/docdas/docdas.component.html
@@ -66,6 +66,7 @@
         <th>urgency</th>
         <th>Update</th>
         <th>Delete</th>
+        <th>View</th>
     </tr>
 </thead>
 <tbody>
@@ -83,6 +84,9 @@
     </td>
     <td>
       <button (click)="delete(patient.id)"  class="btn btn-danger">Delete</button>
+    </td>
+    <td>
+      <button (click)="view(patient.id)"  class="btn btn-info">View</button>
     </td>
 </tr>
 
