--- a/src/app/medicinelist/medicinelist.component.html
+++ b/src/app/medicinelist/medicinelist.component.html
@@ -47,7 +47,7 @@
         <th>Drug Name</th>
         <th>Stock</th>
         
-        <!-- <th>Delete</th> -->
+        <th>Update</th>
     </tr>
 </thead>
 <tbody>
@@ -57,7 +57,7 @@
     <td>{{medicine.stock}}</td>
     
     <td>
-      <!-- <button (click)="delete(patient.id)" class="btn btn-danger">Delete</button> -->
+      <button (click)="update(medicine.id)" class="btn btn-info">Update</button>
     </td>
 </tr>
 
