--- a/src/app/update-medicine/update-medicine.component.html
+++ b/src/app/update-medicine/update-medicine.component.html
@@ -1,4 +1,4 @@
-<p>update-medicine works!</p>
+
 <nav style="margin:auto" class="navbar navbar-expand-lg bg-dark">
         
     <a style="color: white;" class="navbar-brand" href="#">DNYANOBA HOSPITALS</a>
@@ -27,7 +27,7 @@
   </nav>
 
 <div class="container">
-    <h2 class="text-center">Add New Patient</h2>
+    <h2 class="text-center">Update Medicine</h2>
     <form (ngSubmit)="onSubmit()">
      <div class="form-group">
        <label for="">Drug Name</label>
