--- a/src/app/medicinelist/medicinelist.component.html
+++ b/src/app/medicinelist/medicinelist.component.html
@@ -48,6 +48,7 @@
         <th>Stock</th>
         
         <th>Update</th>
+        <th>Delete</th>
     </tr>
 </thead>
 <tbody>
@@ -58,6 +59,9 @@
     
     <td>
       <button (click)="update(medicine.id)" class="btn btn-info">Update</button>
+    </td>
+    <td>
+      <button (click)="delete(medicine.id)" class="btn btn-danger">Delete</button>
     </td>
 </tr>
 
