--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
           
             <div class="mx-2">
                 <button style="margin: 5px;" class="btn btn-danger" data-toggle="modal" data-target="#loginModal"><a style="color: white;" href="javascript:void(0);" routerLink="/doclogin">Login as Doctor doclogin</a></button>
-                <button style="margin: 5px;"class="btn btn-danger" data-toggle="modal" data-target="#loginModal"><a style="color:white;" href="javascript:void(0);" routerLink="/admin">Login as Admin adlogin</a></button>
+                <button style="margin: 5px;"class="btn btn-danger" data-toggle="modal" data-target="#loginModal"><a style="color:white;" href="javascript:void(0);" routerLink="/adminlogin">Login as Admin adlogin</a></button>
                 
             </div>
         </div>
